no. participants for each event are now visible on issues dashboard + small design tweaks

--- a/frontend/app/styles/app.less
+++ b/frontend/app/styles/app.less
@@ -21,6 +21,16 @@ footer {
   text-align: center;
 }
 
+.issue-bottom-info {
+  width: 100%;
+  display: table;
+  vertical-align: middle;
+  div {
+    width: 50%;
+    display: table-cell;
+  }
+}
+
 .list-group a {
   text-decoration: none;
 }
@@ -38,6 +48,7 @@ footer {
   }
   transition: all .3s ease-in-out;
   transform: scale(1.1);
+  cursor: pointer;
 }
 
 .issue-top-info {
